<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="helloizmir.mervealtili.com.idealkilo.MainActivity"
    android:orientation="horizontal"
    android:columnCount="2"
    android:padding="@dimen/padding_grid"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center|clip_vertical"
        android:layout_row="0"
        android:text="@string/boy_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="3">
        <requestFocus/>
    </EditText>
    <TextView
        android:id="@+id/boy_tv"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_orange_light"
        android:padding="@dimen/padding_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center"
        android:layout_row="1"
        android:text="@string/kilo_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:progress="20"
        android:layout_gravity="fill_horizontal"
        />

    <TextView
        android:id="@+id/kilo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="50 kg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|fill_vertical|center"
        android:layout_row="3"
        android:text="@string/cinsiyet"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGrup"
        android:layout_row="3"
        android:layout_column="1"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <RadioButton
            android:id="@+id/bay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bay" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bayan"
            android:layout_marginLeft="20dp"
            android:text="@string/bayan"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/ideal_kilo_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ideal_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:background="@android:color/holo_blue_dark"
        android:padding="@dimen/padding_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|clip_vertical"
        android:layout_row="5"
        android:text="@string/durum"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/durum_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:background="@android:color/holo_purple"
        android:padding="@dimen/padding_tv"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        />
</GridLayout>
